<resources>
    <string name="app_name">SkyMapper</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_message">Welcome to SkyMapper.</string>
    <string name="description_message">Discover Amazing Things Near Around You.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="sign_in_description">Sign in to discover amazing things near around you.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back_button">back</string>
    <string name="positions_received">Positions received</string>
    <string name="positions_error">Positions request error</string>
    <string name="list_title">Celestial Objects List</string>
    <string name="view_in_ar">View in AR</string>
    <string name="ar_image_icon">ar image icon</string>
    <string name="task_description">Task Description</string>
    <string name="reset_password">Reset Password</string>
    <string name="request_reset">Request Token</string>
    <string name="new_password">New Password</string>
    <string name="token">Token\n</string>
    <string name="recover_password">Recover Password</string>
    <string name="search_hint">Search for a celestial</string>
    <string name="search">Search</string>
    <string name="delete">Del\n</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="error_parsing_response">Error parsing response</string>
    <string name="unexpected_response_format">Unexpected response format</string>
    <string name="no_content_found">No content found</string>
    <string name="error">Error</string>
    <string name="ipt_logo">IPT Logo</string>
    <string name="refresh">Refresh</string>
    <string name="about_us">About Us</string>
    <string name="list">List</string>
    <string name="logout">Logout</string>
    <string name="astronomical_objects_list">Astronomical Objects List</string>
    <string name="ar_view">AR View</string>
    <string name="about_us_button">about us button</string>
    <string name="informacao">Info</string>
    <string name="title">Title</string>
    <string name="more_info">More info +</string>
    <string name="aviso">Warning</string>
    <string name="toque_na_tela_para_posicionar_os_objetos_e_mantenha_o_dispositivo_im_vel_por_alguns_segundos_para_estabiliza_o">When using SkyMapper, tap the screen to place objects and keep the device steady. Use under adult supervision and stay aware of your surroundings to explore safely.</string>
    <string name="error_requesting_arcore_installation">Error requesting ARCore installation</string>
    <string name="arcore_is_not_supported_on_this_device">ARCore is not supported on this device</string>
    <string name="arcore_availability_unknown">ARCore availability unknown</string>
    <string name="all_permissions_granted">All permissions granted</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="this_app_requires_camera_and_location_permissions_to_function_properly_please_enable_them_in_the_app_settings">This app requires Camera and Location permissions to function properly. Please enable them in the app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="framework_and_libraries">Frameworks and Libraries</string>
    <string name="no_translation_found">No translation found</string>
    <string name="no_content_generated">No content generated</string>
    <string name="no_images_found">No images found</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_the_token_and_new_password">Please enter the token and new password</string>
    <string name="password_reset_email_sent_successfully">Password reset email sent successfully</string>
    <string name="error_sending_password_reset_email">Error sending password reset email</string>
    <string name="request_failed">Request failed</string>
    <string name="password_reset_successfully">Password reset successfully</string>
    <string name="error_resetting_password">Error resetting password</string>


</resources>