<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midGrey"
    tools:context=".ui.views.RecoverPasswordActivity">

    <!-- Purple Background on top with rounded bottom corners -->
    <View
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_background" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back"
        app:tint="@android:color/white" />

    <!-- App Icon -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_launcher_foreground" />

    <!-- LinearLayout for Recovery Form -->
    <LinearLayout
        android:id="@+id/recovery_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_background"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/edittext_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Recovery Message -->
        <TextView
            android:id="@+id/recovery_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/recover_password"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />



        <!-- Email EditText -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <!-- Token EditText -->
        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/token"
            android:inputType="text"
            android:padding="12dp" />

        <!-- New Password EditText -->
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Request Reset Password Button -->
        <Button
            android:id="@+id/request_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            android:text="@string/request_reset"
            android:textColor="@android:color/white" />

        <!-- Reset Password Button -->
        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>
