<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midGrey"
    tools:context=".ui.views.MainActivity">

    <!-- Purple Background on top -->
    <View
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_background" />


    <!-- App Icon -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo" />

    <!-- LinearLayout for Login Form -->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:background="@drawable/edittext_background"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Welcome Message -->
        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/welcome_message"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />

        <!-- Description Message -->
        <TextView
            android:id="@+id/description_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/description_message"
            android:textColor="@color/textColorSecondary"
            android:textSize="14sp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@android:color/white"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/primaryColor" />

    </LinearLayout>

    <!-- Skip TextView -->
    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/skip"
        android:textColor="@color/primaryColor"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/about_icon"
        android:background="@android:color/transparent"
        android:contentDescription="@string/about_us_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>




</RelativeLayout>
