<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midGrey"
    tools:context=".ui.views.RegisterActivity">

    <!-- Purple Background on top with rounded bottom corners -->
    <View
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_background" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:tint="@android:color/white" />

    <!-- App Icon -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_logo" />

    <!-- LinearLayout for Register Form -->
    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_background"
        android:layout_marginTop="-100dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:background="@drawable/edittext_background"
        android:padding="16dp"
        android:elevation="4dp"
        android:gravity="center_horizontal">

        <!-- Welcome Message -->
        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />

        <!-- First Name EditText -->
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:background="@drawable/edittext_background" />

        <!-- Last Name EditText -->
        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:background="@drawable/edittext_background" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/edittext_background" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edittext_background" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- Skip TextView -->
    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_border"
        android:text="@string/skip"
        android:textColor="@color/primaryColor"
        android:clickable="true"
        android:focusable="true" />

</RelativeLayout>
