<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.views.ArActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corners"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/refreshButton"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/aboutButton"
            style="@style/imgButtonAR" />

        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:contentDescription="@string/about_us"
            android:src="@drawable/about_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refreshButton"
            app:layout_constraintBottom_toTopOf="@id/listButton"
            style="@style/imgButtonAR"/>

        <ImageButton
            android:id="@+id/listButton"
            android:contentDescription="@string/list"
            android:src="@drawable/list_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutButton"
            app:layout_constraintBottom_toTopOf="@id/logoutButton"
            style="@style/imgButtonAR"/>

        <ImageButton
            android:id="@+id/logoutButton"
            android:contentDescription="@string/logout"
            android:src="@drawable/logout_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listButton"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/imgButtonAR"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>